# verTIFFer-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
ImageMagick-7.1.0/: NOTICE.txt  configure.xml  delegates.xml
src/: main.rs
