[package]
name = "vertiffer-rs"
authors = ["Daniel Ostermann <dostermann@mailbox.org>"]
version = "1.0.0"
edition = "2021"
license-file = "LICENSE"
homepage = "https://github.com/dostermann/verTIFFer-rs"
repository = "https://github.com/dostermann/verTIFFer-rs.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.17.0"
rfd = "0.8.2"
glob = "0.3.0"
